# livingwp

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/scripts/: comment-generation-usage.mjs
.github/workflows/: add_industry.yml  deploy_website.yml  jekyll.yml  run_agent.yml
src/livingwp/: __init__.py  agents.py
src/livingwp/config/: industries.json
src/livingwp/prompts/: instructions_planning.md  instructions_research.md  instructions_research_aec.md  instructions_research_data_analytics.md  instructions_research_nz_snapshot.md  instructions_snapshot.md  instructions_writing.md
src/livingwp/utils/: file_search.py  files.py  logging.py  markdown.py  usage.py
src/website/: 404.html  _config.yml  about.markdown  education.markdown  how-it-works.markdown  how-it-works.md  index.markdown  index.md  robots.txt  whitepaper.markdown
src/website/_includes/: article_list.md  head.html  homepage_snapshot.html  snapshot_feature.md
src/website/_layouts/: article.html  default.html
src/website/_posts/: 2025-06-22-welcome-to-jekyll.markdown
src/website/assets/: main.scss  style.css
src/website/industries/: healthcare.md
src/website/whitepaper/: education.markdown  index.markdown
src/website/whitepaper/content/: academia.markdown  academic_research.markdown  agriculture.markdown  architecture_engineering_construction.markdown  civil_construction.markdown  creative_industries.markdown  data_analytics.markdown  education.markdown  finance.markdown  healthcare.markdown  nz.markdown  public_sector.markdown
(+10 files in other folders)
